2006-02-27  Rafael Villar Burke  <pachi@mmn-arquitectos.com>

	* articles/cairo-pygtk-widgets/
	* articles/cairo-pygtk-widgets/cairo-pygtk-widgets2.htm
	* articles/cairo-pygtk-widgets/geom-1.png
	* articles/cairo-pygtk-widgets/geom-2.png
	* articles/cairo-pygtk-widgets/clock.gif
	* articles/cairo-pygtk-widgets/clock_ex4.py
	* articles/cairo-pygtk-widgets/clock_ex5.py
	* :Added previous files to hold a local copy of the article.
	* articles.src: add article by Lawrence Oluyede

2006-02-23  Rafael Villar Burke  <pachi@mmn-arquitectos.com>

	* applications.src: Changed JonoEdit to Jokosher and its URL

2006-02-21  Rafael Villar Burke  <pachi@mmn-arquitectos.com>

	* applications.src: Add JonoEdit

2006-02-13  Rafael Villar Burke  <pachi@mmn-arquitectos.com>

	* applications.src: Add GPixPod

2006-02-09  Johan Dahlin  <jdahlin@async.com.br>

	* applications.src: Add Gnome Catalog

2006-01-31  Rafael Villar Burke  <pachi@mmn-arquitectos.com>

	* applications.src: Update UPS Monitor URL.

2006-01-31  Rafael Villar Burke  <pachi@mmn-arquitectos.com>

	* applications.src: Update RTGraph URL.

2006-01-31  Rafael Villar Burke  <pachi@mmn-arquitectos.com>

	* applications.src: Update SBackup URL.

2006-01-31  Rafael Villar Burke  <pachi@mmn-arquitectos.com>

	* applications.src: Update Revelation URL.

2006-01-31  Rafael Villar Burke  <pachi@mmn-arquitectos.com>

	* applications.src: Update Pida URL.

2006-01-31  Rafael Villar Burke  <pachi@mmn-arquitectos.com>

	* applications.src: Update Gonvert URL.

2006-01-31  Rafael Villar Burke  <pachi@mmn-arquitectos.com>

	* applications.src: Change PySudoku to Python Sudoku and fix URL.

2006-01-30  Rafael Villar Burke  <pachi@mmn-arquitectos.com>

	* applications.src: Reorder apps and change sections again.

2006-01-30  Rafael Villar Burke  <pachi@mmn-arquitectos.com>

	* applications.src: Added Istanbul and Seamless.

2006-01-30  Rafael Villar Burke  <pachi@mmn-arquitectos.com>

	* applications.src: Added piviti and flumotion.
